tests/base/invalid/SetEmpty_CompileFail_1.whiley


void f(int x):
    sys.out.println(Any.toString(x))

void ::main(System.Console sys):
    f({})
